--- a/config/emacs/config.org
+++ b/config/emacs/config.org
@@ -37,7 +37,6 @@ UI debloating
         inhibit-startup-message t)
   (tool-bar-mode -1)     ; Disable the toolbar
   (tooltip-mode -1)      ; Disable tooltips
-  (fringe-mode '(0 . 0)) ; no fringe
   (menu-bar-mode -1)     ; Disable the menu bar
   (scroll-bar-mode -1)   ; Disable the scrollbar
 #+end_src
@@ -212,16 +211,6 @@ Marginalia adds descriptions and stuff to your minibuffer
     :config (which-key-mode)
     (which-key-setup-side-window-bottom)
     (setq which-key-idle-delay 0.1))
-#+end_src
-
-** Mixed Pitch
-#+begin_src elisp
-  (use-package mixed-pitch
-    :hook
-    (text-mode . mixed-pitch-mode)
-    :config
-    (setq mixed-pitch-variable-pitch-cursor "underline"
-          mixed-pitch-set-height t))
 #+end_src
 
 ** Languages
@@ -410,9 +399,22 @@ Add icons to ibuffer
                  '(width      . 81)
                  '(vertical-scroll-bars . nil)
                  '(internal-border-width . 24)
-                 '(left-fringe    . 1)
-                 '(right-fringe   . 1)
                  '(tool-bar-lines . 0))))
+#+end_src
+
+** Glyphs for wrapped lines
+
+No fringe but nice glyphs for truncated and wrapped lines
+#+begin_src elisp
+  (fringe-mode '(0 . 0))
+  (defface fallback '((t :family "Cartograph CF"
+			 :inherit 'face-faded)) "Fallback")
+  (set-display-table-slot standard-display-table 'truncation
+			  (make-glyph-code ?… 'fallback))
+  (set-display-table-slot standard-display-table 'wrap
+			  (make-glyph-code ?↩ 'fallback))
+  (set-display-table-slot standard-display-table 'selective-display
+			  (string-to-vector " …"))
 #+end_src
 
 ** Modeline
@@ -497,7 +499,6 @@ Add icons to ibuffer
               (local-set-key (kbd "q") 'org-agenda-exit)))
   (use-package htmlize)
   (add-hook 'org-mode-hook (lambda ()
-                             (variable-pitch-mode t)
                              (toggle-word-wrap)
                              (flyspell-mode t)
                              (electric-indent-local-mode -1)))
@@ -539,40 +540,43 @@ Deft is nice for note-taking
 Make org-mode prettier
 
 #+begin_src elisp
-    (defun org/prettify-set ()
-      (interactive)
-      (setq prettify-symbols-alist
-            '(("#+begin_src" . ">")
-              ("#+BEGIN_SRC" . ">")
-              ("#+end_src" . "<")
-              ("#+END_SRC" . "<")
-              ("#+begin_example" . "")
-              ("#+BEGIN_EXAMPLE" . "")
-              ("#+end_example" . "")
-              ("#+END_EXAMPLE" . "")
-              ("#+results:" . "")
-              ("#+RESULTS:" . "")
-              ("#+begin_quote" . "❝")
-              ("#+BEGIN_QUOTE" . "❝")
-              ("#+end_quote" . "❞")
-              ("#+END_QUOTE" . "❞"))))
-    (add-hook 'org-mode-hook 'org/prettify-set)
+  (defun org/prettify-set ()
+    (interactive)
+    (setq prettify-symbols-alist
+	  '(("#+begin_src" . ">")
+	    ("#+BEGIN_SRC" . ">")
+	    ("#+end_src" . "<")
+	    ("#+END_SRC" . "<")
+	    ("#+begin_example" . "")
+	    ("#+BEGIN_EXAMPLE" . "")
+	    ("#+end_example" . "")
+	    ("#+END_EXAMPLE" . "")
+	    ("#+results:" . "")
+	    ("#+RESULTS:" . "")
+	    ("#+begin_quote" . "❝")
+	    ("#+BEGIN_QUOTE" . "❝")
+	    ("#+end_quote" . "❞")
+	    ("#+END_QUOTE" . "❞"))))
+  (add-hook 'org-mode-hook 'org/prettify-set)
 
-    (defun prog/prettify-set ()
-      (interactive)
-      (setq prettify-symbols-alist
-            '(("lambda" . "λ")
-              ("->" . "→")
-              ("<-" . "←")
-              ("<=" . "≤")
-              (">=" . "≥")
-              ("!=" . "≠")
-              ("~=" . "≃")
-              ("=~" . "≃"))))
-    (add-hook 'prog-mode-hook 'prog/prettify-set)
+  (defun prog/prettify-set ()
+    (interactive)
+    (setq prettify-symbols-alist
+	  '(("lambda" . "λ")
+	    ("->" . "→")
+	    ("<-" . "←")
+	    ("<=" . "≤")
+	    (">=" . "≥")
+	    ("!=" . "≠")
+	    ("~=" . "≃")
+	    ("=~" . "≃"))))
+  (add-hook 'prog-mode-hook 'prog/prettify-set)
 
-    (global-prettify-symbols-mode)
+  (global-prettify-symbols-mode)
 #+end_src
+
+* Extra
+
 
 the end
 #+begin_src elisp
