--- a/config/emacs/config.org
+++ b/config/emacs/config.org
@@ -56,7 +56,7 @@ optimizations
 
 Some useful minor modes
 #+begin_src elisp
-  (electric-pair-mode) ;; autopairs
+  ;; (electric-pair-mode) ;; autopairs
   (recentf-mode) ;; recent files
 #+end_src
 
@@ -67,9 +67,8 @@ Setting up use-package
   ;; init package sources
   (require 'package)
   (setq package-archives '(("gnu" . "http://elpa.gnu.org/packages/")
-                           ("nongnu" . "https://elpa.nongnu.org/nongnu/")
-                           ("melpa" . "http://melpa.org/packages/")))
-  (customize-set-variable 'package-enable-at-startup nil)
+			   ("nongnu" . "https://elpa.nongnu.org/nongnu/")
+			   ("melpa" . "http://melpa.org/packages/")))
   (package-initialize)
   (unless package-archive-contents
     (package-refresh-contents))
@@ -80,10 +79,10 @@ Setting up use-package
 
   (require 'use-package)
   (setq use-package-always-ensure t
-        package-quickstart t)
+	package-quickstart t)
 #+end_src
 
-** gchs
+** gcmh
 #+begin_src elisp
   (use-package gcmh
     :init
@@ -114,7 +113,7 @@ Setting up use-package
 ** Leader
 #+begin_src elisp
   (use-package evil-leader
-    :config
+    :init
     (global-evil-leader-mode)
     (evil-leader/set-leader "<SPC>")
     (evil-leader/set-key
@@ -122,27 +121,31 @@ Setting up use-package
       ".f" 'consult-isearch
       ".q" 'delete-frame
       ".e" 'eval-region
-      ".s" 'straight-use-package
       ;; Files
       "fr" 'consult-recent-file
       "fb" 'consult-bookmark
       "ff" 'find-file
       "fd" 'dired
-      ;; Open
+      ;; Org
       "oa" 'org-agenda
+      "fh" 'consult-org-heading
+      ;; Open
       "om" 'mu4e
-      "og" 'magit
+      "os" 'eshell
       ;; Notes
       "no" 'deft
       "nf" 'deft-find-file
       "nn" 'deft-new-file-named
       ;; Bufffers
-      "bv" 'split-window-right
-      "bh" 'split-window-below
       "bd" 'kill-current-buffer
       "bb" 'consult-buffer
       "bx" 'switch-to-scratch
       "bi" 'ibuffer
+      ;; Windows
+      "wv" 'split-window-right
+      "wh" 'split-window-below
+      "wt" 'window-split-toggle
+      "ws" 'ace-window
       ;; Help
       "hh" 'help
       "hk" 'describe-key
@@ -213,12 +216,30 @@ Marginalia adds descriptions and stuff to your minibuffer
     (setq which-key-idle-delay 0.1))
 #+end_src
 
+** Snippets
+#+begin_src elisp
+  (use-package yasnippet
+    :hook (org-mode . yas-global-mode))
+#+end_src
+
 ** Languages
 Some major modes to improve language support
 #+begin_src elisp
+  (use-package clojure-mode)
   (use-package nix-mode)
   (use-package lua-mode)
-  (use-package markdown-mode)
+#+end_src
+
+*** Parinfer
+Writing lisp has never felt this good.
+#+begin_src elisp
+  (use-package parinfer-rust-mode
+    :hook ((emacs-lisp-mode clojure-mode) . parinfer-rust-mode))
+#+end_src
+
+*** Cider
+#+begin_src elisp
+  (use-package cider :defer t)
 #+end_src
 
 ** Flycheck
@@ -265,50 +286,6 @@ Visualize color values.
 #+end_src
 
 ** Ibuffer
-#+begin_src elisp
-  (global-set-key (kbd "C-x C-b") 'ibuffer)
-  (with-eval-after-load 'ibuffer
-    (setq ibuffer-expert t
-          ibuffer-show-empty-filter-groups nil)
-    (defun my/human-readable-file-sizes-to-bytes (string)
-      "Convert a human-readable file size into bytes."
-      (interactive)
-      (cond
-       ((string-suffix-p "G" string t)
-        (* 1000000000 (string-to-number (substring string 0 (- (length string) 1)))))
-       ((string-suffix-p "M" string t)
-        (* 1000000 (string-to-number (substring string 0 (- (length string) 1)))))
-       ((string-suffix-p "K" string t)
-        (* 1000 (string-to-number (substring string 0 (- (length string) 1)))))
-       (t
-        (string-to-number (substring string 0 (- (length string) 1))))))
-
-    (defun my/bytes-to-human-readable-file-sizes (bytes)
-      "Convert number of bytes to human-readable file size."
-      (interactive)
-      (cond
-       ((> bytes 1000000000) (format "%10.1fG" (/ bytes 1000000000.0)))
-       ((> bytes 100000000) (format "%10.0fM" (/ bytes 1000000.0)))
-       ((> bytes 1000000) (format "%10.1fM" (/ bytes 1000000.0)))
-       ((> bytes 100000) (format "%10.0fk" (/ bytes 1000.0)))
-       ((> bytes 1000) (format "%10.1fk" (/ bytes 1000.0)))
-       (t (format "%10d" bytes))))
-
-    ;; Use human readable Size column instead of original one
-    (define-ibuffer-column size-h
-      (:name "Size"
-             :inline t
-             :summarizer
-             (lambda (column-strings)
-               (let ((total 0))
-                 (dolist (string column-strings)
-                   (setq total
-                         (+ (float (my/human-readable-file-sizes-to-bytes string))
-                            total)))
-                 (my/bytes-to-human-readable-file-sizes total)))
-             )
-      (my/bytes-to-human-readable-file-sizes (buffer-size)))
-#+end_src
 
 Modify the default ibuffer formats
 #+begin_src elisp
@@ -321,44 +298,45 @@ Modify the default ibuffer formats
                 (mode 16 16 :left :elide))
           (mark " "
                 (name 16 -1)
-                " " filename))))
+                " " filename)))
 #+end_src
 
 Set filter groups
 #+begin_src elisp
-
+  (setq ibuffer-show-empty-filter-groups nil)
   (setq ibuffer-saved-filter-groups
-        '(("main"
-           ("modified" (and
-                        (modified . t)
-                        (visiting-file . t)))
-           ("term" (or
-                    (mode . vterm-mode)
-                    (mode . eshell-mode)
-                    (mode . term-mode)
-                    (mode . shell-mode)))
-           ("planning" (or
-                        (name . "^\\*Calendar\\*$")
-                        (name . "^agenda")
-                        (mode . org-agenda-mode)))
-           ("img" (mode . image-mode))
-           ("config" (filename . "/dotfiles/"))
-           ("blog" (filename . "/projects/site/"))
-           ("code" (filename . "/projects/"))
-           ("notes" ( filename . "/notes/"))
-           ("org" (mode . org-mode))
-           ("dired" (mode . dired-mode))
-           ("help" (or (name . "\*Help\*")
-                       (name . "\*Apropos\*")
-                       (name . "\*info\*")
-                       (mode . help-mode)))
-           ("internal" (name . "^\*.*$"))
-           ("other" (name . "^.*$"))
-           )))
+	'(("main"
+	   ("modified" (and
+			(modified . t)
+			(visiting-file . t)))
+	   ("term" (or
+		    (mode . vterm-mode)
+		    (mode . eshell-mode)
+		    (mode . term-mode)
+		    (mode . shell-mode)))
+	   ("planning" (or
+			(name . "^\\*Calendar\\*$")
+			(name . "^agenda")
+			(mode . org-agenda-mode)))
+	   ("img" (mode . image-mode))
+	   ("config" (filename . "/dotfiles/"))
+	   ("blog" (filename . "/projects/site/"))
+	   ("code" (filename . "/projects/"))
+	   ("notes" ( filename . "/notes/"))
+	   ("org" (mode . org-mode))
+	   ("dired" (mode . dired-mode))
+	   ("help" (or (name . "\*Help\*")
+		       (name . "\*Apropos\*")
+		       (name . "\*info\*")
+		       (mode . help-mode)))
+	   ("internal" (name . "^\*.*$"))
+	   ("other" (name . "^.*$"))
+	   )))
+
   (add-hook 'ibuffer-mode-hook
-            (lambda ()
-              (ibuffer-auto-mode 1)
-              (ibuffer-switch-to-saved-filter-groups "main")))
+	    (lambda ()
+	      (ibuffer-auto-mode 1)
+	      (ibuffer-switch-to-saved-filter-groups "main")))
 #+end_src
 
 Add icons to ibuffer
@@ -391,30 +369,16 @@ Add icons to ibuffer
 
 ** Layout
 #+begin_src elisp
+  (fringe-mode 24)
   (setq default-frame-alist
-        (append (list
-               '(min-height . 1)
-                 '(height     . 45)
-               '(min-width  . 1)
-                 '(width      . 81)
-                 '(vertical-scroll-bars . nil)
-                 '(internal-border-width . 24)
-                 '(tool-bar-lines . 0))))
-#+end_src
-
-** Glyphs for wrapped lines
-
-No fringe but nice glyphs for truncated and wrapped lines
-#+begin_src elisp
-  (fringe-mode '(0 . 0))
-  (defface fallback '((t :family "Cartograph CF"
-			 :inherit 'face-faded)) "Fallback")
-  (set-display-table-slot standard-display-table 'truncation
-			  (make-glyph-code ?… 'fallback))
-  (set-display-table-slot standard-display-table 'wrap
-			  (make-glyph-code ?↩ 'fallback))
-  (set-display-table-slot standard-display-table 'selective-display
-			  (string-to-vector " …"))
+	(append (list
+	       '(min-height . 1)
+		 '(height     . 45)
+	       '(min-width  . 1)
+		 '(width      . 81)
+		 '(vertical-scroll-bars . nil)
+		 '(internal-border-width . 24)
+		 '(tool-bar-lines . 0))))
 #+end_src
 
 ** Modeline
@@ -438,7 +402,7 @@ No fringe but nice glyphs for truncated and wrapped lines
                  (:eval (if (buffer-narrowed-p)
                            (propertize "-" 'face `(:inherit face-faded)))))
                '("%p %l:%c "
-                 (:eval (propertize " %m " 'face 'font-lock-string-face)))))))
+                 (:eval (propertize " %m" 'face 'font-lock-string-face)))))))
 
 #+end_src
 
@@ -453,6 +417,72 @@ No fringe but nice glyphs for truncated and wrapped lines
   (use-package good-scroll
     :config
     (good-scroll-mode 1))
+#+end_src
+
+* Window Stuff
+
+Configure how a particular buffer appears.
+#+begin_src elisp
+  (setq display-buffer-alist
+	'(
+	  ("*Help*"
+	   (display-buffer-in-side-window)
+	   (window-width 0.25)
+	   (side . right)
+	   (slot . 0))
+	  ("\\*e?shell.*"
+	   (display-buffer-in-side-window)
+	   (window-height . 0.35)
+	   (side . bottom)
+	   (slot . -1))))
+#+end_src
+
+** Functions
+
+Fun functions.
+#+begin_src elisp
+  (defun window-split-toggle ()
+    "Toggle between horizontal and vertical split."
+    (interactive)
+    (if (> (length (window-list)) 2)
+	(error "wont work lol")
+      (let ((func (if (window-full-height-p)
+		      #'split-window-vertically
+		    #'split-window-horizontally)))
+	(delete-other-windows)
+	(funcall func)
+	(save-selected-window
+	  (other-window 1)
+	  (switch-to-buffer (other-buffer))))))
+
+  ;; got this off of some random gist from 2012
+  (defun toggle-split-view ()
+    "Toggle between split window and single window."
+    (interactive)
+    (if (not (window-minibuffer-p (selected-window)))
+	(progn
+	  (if (< 1 (count-windows))
+	      (progn
+		(window-configuration-to-register ?u)
+		(delete-other-windows))
+	    (jump-to-register ?u))))
+    (my-iswitchb-close))
+
+  (define-key global-map (kbd "C-`") 'toggle-split-view)
+
+  ;; iswitchb hasn't been included in emacs 24.4, so i have no idea what this does
+  (defun my-iswitchb-close()
+   "Open iswitchb or, if in minibuffer go to next match."
+   (interactive)
+   (if (window-minibuffer-p (selected-window))
+      (keyboard-escape-quit)))
+#+end_src
+
+** Ace-window
+Quite useful plugin for switching between buffers
+#+begin_src elisp
+  (use-package ace-window
+    :defer t)
 #+end_src
 
 * Mail
@@ -495,21 +525,21 @@ No fringe but nice glyphs for truncated and wrapped lines
   (setq org-agenda-files '("~/org/agenda.org"))
 
   (add-hook 'org-agenda-mode-hook
-            (lambda ()
-              (local-set-key (kbd "q") 'org-agenda-exit)))
+	    (lambda ()
+	      (local-set-key (kbd "q") 'org-agenda-exit)))
   (use-package htmlize)
   (add-hook 'org-mode-hook (lambda ()
-                             (toggle-word-wrap)
-                             (flyspell-mode t)
-                             (electric-indent-local-mode -1)))
+                             (toggle-truncate-lines)
+			     (flyspell-mode t)
+			     (electric-indent-local-mode -1)))
   (setq org-src-window-setup 'current-window)
 
     (defun org-toggle-emphasis ()
       "Toggle hiding/showing of org emphasize markers."
       (interactive)
       (if org-hide-emphasis-markers
-        (set-variable 'org-hide-emphasis-markers nil)
-        (set-variable 'org-hide-emphasis-markers t)))
+	(set-variable 'org-hide-emphasis-markers nil)
+	(set-variable 'org-hide-emphasis-markers t)))
     (define-key org-mode-map (kbd "C-c e") 'org-toggle-emphasis)
 #+end_src
 
@@ -574,9 +604,6 @@ Make org-mode prettier
 
   (global-prettify-symbols-mode)
 #+end_src
-
-* Extra
-
 
 the end
 #+begin_src elisp
